refactor: migrate Collections/Arrays.asList to Java 9+ factory methods
Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of(), Collections.singletonList()
with List.of(), Collections.emptyList/Map/Set() with List/Map/Set.of(),
new HashMap<>() + put() chains with Map.of(), and
new HashSet<>(Arrays.asList()) with Set.of() across 20 files.
Correctly skips shaded com.twitter.hpack code and array-parameter
conversions in Util.java and MediaTypes.java.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization