@@ -31,8 +31,7 @@ import org.apache.pekko.util.ByteString;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 // #handleWebSocketMessages
 import static org.apache.pekko.http.javadsl.server.Directives.path;
@@ -63,10 +62,10 @@ public class WebSocketDirectivesExamplesTest extends JUnitJupiterRouteTest {
                             Source.single("Hello ")
                                 .concat(tm.getStreamedText())
                                 .concat(Source.single("!")));
-                    return Collections.singletonList(ret);
+                    return List.of(ret);
                   } else if (msg instanceof BinaryMessage bm) {
                     bm.getStreamedData().runWith(Sink.ignore(), materializer());
-                    return Collections.emptyList();
+                    return List.of();
                   } else {
                     throw new IllegalArgumentException("Unsupported message type!");
                   }
@@ -110,10 +109,10 @@ public class WebSocketDirectivesExamplesTest extends JUnitJupiterRouteTest {
                             Source.single("Hello ")
                                 .concat(tm.getStreamedText())
                                 .concat(Source.single("!")));
-                    return Collections.singletonList(ret);
+                    return List.of(ret);
                   } else if (msg instanceof BinaryMessage bm) {
                     bm.getStreamedData().runWith(Sink.ignore(), materializer());
-                    return Collections.emptyList();
+                    return List.of();
                   } else {
                     throw new IllegalArgumentException("Unsupported message type!");
                   }
@@ -140,7 +139,7 @@ public class WebSocketDirectivesExamplesTest extends JUnitJupiterRouteTest {
                 Uri.create("/services"),
                 wsClient.flow(),
                 materializer(),
-                Arrays.asList("other", "echo")))
+                List.of("other", "echo")))
         .assertHeaderExists(SecWebSocketProtocol.create("echo"));
 
     wsClient.sendMessage("Peter");
@@ -177,7 +176,7 @@ public class WebSocketDirectivesExamplesTest extends JUnitJupiterRouteTest {
 
     // WS creates a WebSocket request for testing
     testRoute(websocketRoute)
-        .run(WS(Uri.create("/services"), wsClient.flow(), materializer(), Collections.emptyList()))
+        .run(WS(Uri.create("/services"), wsClient.flow(), materializer(), List.of()))
         .assertHeaderExists(SecWebSocketProtocol.create("echo"));
 
     wsClient.sendMessage("ping");
@@ -214,7 +213,7 @@ public class WebSocketDirectivesExamplesTest extends JUnitJupiterRouteTest {
                 Uri.create("/services"),
                 wsClient.flow(),
                 materializer(),
-                Arrays.asList("echo", "alfa", "kilo")))
+                List.of("echo", "alfa", "kilo")))
         .assertHeaderExists(SecWebSocketProtocol.create("echo"));
 
     wsClient.sendMessage("ping");
