@@ -17,7 +17,6 @@ import static org.apache.pekko.http.impl.util.Util.convertArray;
 import static org.apache.pekko.http.impl.util.Util.convertMapToScala;
 
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Map;
 import org.apache.pekko.http.ccompat.MapHelpers;
 import org.apache.pekko.stream.javadsl.Source;
@@ -109,7 +108,7 @@ public final class Multiparts {
   public static Multipart.FormData.BodyPart createFormDataBodyPart(
       String name, BodyPartEntity entity) {
     List nil = Nil$.MODULE$;
-    Map<String, String> additionalDispositionParams = Collections.emptyMap();
+    Map<String, String> additionalDispositionParams = Map.of();
     return org.apache.pekko.http.scaladsl.model.Multipart$FormData$BodyPart$Builder$.MODULE$.create(
         name,
         (org.apache.pekko.http.scaladsl.model.BodyPartEntity) entity,
@@ -145,7 +144,7 @@ public final class Multiparts {
   public static Multipart.FormData.BodyPart.Strict createFormDataBodyPartStrict(
       String name, HttpEntity.Strict entity) {
     List nil = Nil$.MODULE$;
-    Map<String, String> additionalDispositionParams = Collections.emptyMap();
+    Map<String, String> additionalDispositionParams = Map.of();
     return org.apache.pekko.http.scaladsl.model.Multipart$FormData$BodyPart$StrictBuilder$.MODULE$
         .createStrict(
             name,
