@@ -15,8 +15,8 @@ package org.apache.pekko.http.javadsl.server.directives;
 
 import static org.apache.pekko.http.javadsl.server.Directives.*;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.pekko.http.javadsl.coding.Coder;
 import org.apache.pekko.http.javadsl.model.HttpRequest;
@@ -61,7 +61,7 @@ public class CodingDirectivesTest extends JUnitJupiterRouteTest {
   @Test
   public void testEncodingWhenDeflateRequestedAndGzipSupported() {
     TestRoute route =
-        testRoute(encodeResponseWith(Arrays.asList(Coder.Gzip), () -> complete("tester")));
+        testRoute(encodeResponseWith(List.of(Coder.Gzip), () -> complete("tester")));
 
     HttpRequest request =
         HttpRequest.create().addHeader(AcceptEncoding.create(HttpEncodings.DEFLATE));
@@ -94,7 +94,7 @@ public class CodingDirectivesTest extends JUnitJupiterRouteTest {
     TestRoute route =
         testRoute(
             decodeRequestWith(
-                Collections.singleton(Coder.Gzip),
+                Set.of(Coder.Gzip),
                 () -> extractEntity(entity -> complete(entity))));
 
     HttpRequest gzipRequest =
